--- a/ml/config/global.yaml
+++ b/ml/config/global.yaml
@@ -4,3 +4,6 @@ DATA_DIR: "/media/marsdenlab/Data2/datasets/vessel_tracking"
 CASES_DIR: "/home/marsdenlab/projects/vessel_tracking/ml/data"
 DIM: 128
 DATA_SAMPLES: 500
+
+SMALL_WINDOW_DIM: 50
+SMALL_VESSEL_CUTOFF: 50
